tests/bad/bad_include_str.glaz
fn main() {
	_ = include_str!("nonexistent.file");
}
